tcpcounter-svc-controlplane.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "3000"
  name: counter1
  labels:
    role: apiserver
    app: kubernetes
spec:
  ports:
    - port: 3000
      name: v2-port
  selector:
    role: apiserver
    app: kubernetes
  type: LoadBalancer
